...
//             children: [
//               Spacer(flex: 2),
//               RichText(
//                 text: TextSpan(
//                   children: <TextSpan>[
//                     TextSpan(
//                       text: 'RENT',
//                       style: TextStyle(
//                         fontSize: 64,
//                         fontWeight: FontWeight.w700,
//                         color: Colors.white,
//                       ),
//                     ),
...
//                     ),
//                   ),

//                   child: Row(
//                     mainAxisAlignment: MainAxisAlignment.center,
//                     children: [
//                       Text("Get Started"),
//                       SizedBox(width: 8),
//                       Icon(Icons.arrow_forward, size: 28),
//                     ],
//                   ),
//                 ),
//               ),
...
